fix(menu): corrige la visibilité du focus dans le menu mobile (#3068)

--- a/src/client/components/layouts/Header/Navigation/Nav.module.scss
+++ b/src/client/components/layouts/Header/Navigation/Nav.module.scss
@@ -8,6 +8,9 @@
 }
 
 $offset-sub-nav: 2.5rem;
+$outline-offset-focus: -2px;
+$outline-offset-focus-last-child: -4px;
+
 
 .navigationDesktop {
   display: none;
@@ -46,7 +49,7 @@ $offset-sub-nav: 2.5rem;
     justify-content: center;
     align-items: center;
     height: 100%;
-    outline-offset: -2px;
+    outline-offset: $outline-offset-focus;
   }
 
   & .navItemLabel {
@@ -85,7 +88,7 @@ $offset-sub-nav: 2.5rem;
     }
 
     > a.navItemLabel {
-      outline-offset: -2px;
+      outline-offset: $outline-offset-focus;
     }
 
     &:not(:last-child) {
@@ -105,6 +108,8 @@ $offset-sub-nav: 2.5rem;
   margin: auto;
   color: inherit;
   width: 100%;
+  outline-offset: $outline-offset-focus;
+
 
   svg {
     vertical-align: text-top;
@@ -134,6 +139,11 @@ $offset-sub-nav: 2.5rem;
   & > .navItem:last-child {
     color: utilities.$color-text-primary-inverse;
     background-color: utilities.$color-title-primary-contrast;
+
+    & > .subNavItemButton {
+      outline-color: utilities.$color-cta-background-secondary;
+      outline-offset: $outline-offset-focus-last-child;
+    }
 
     &:hover {
       background-color: color.adjust(utilities.$color-title-primary-contrast, utilities.$alpha:-0.15);
